<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_base64"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_base64" />

    <Button
        android:id="@+id/btn_MD5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_MD5" />

    <Button
        android:id="@+id/btn_DES"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_DES" />

    <Button
        android:id="@+id/btn_3DES"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_3DES" />

    <Button
        android:id="@+id/btn_AES"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_AES" />

    <Button
        android:id="@+id/btn_RSA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_RSA" />

</LinearLayout>
